[package]
name = "megacli_ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
chrono = "0.4.23"
influxdb = { version = "0.5.2", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152"}
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"