[package]
name = "megacli_ingestor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
chrono = "0.4.23"
influxdb = { version = "0.5.2", features = ["derive"] }
